--- a/Mini Nov 3rd/22.11.3 - Mini proj.html
+++ b/Mini Nov 3rd/22.11.3 - Mini proj.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Andrew's Mini Project November 3rd, 2023</title>
-<link rel="stylesheet" href="./Mini-Projects-at-UR/Mini Nov 3rd/style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 <br />
 <br />
   <figure id="top of page">
-  <img src="./Mini-Projects-at-UR/Mini Nov 3rd/Images/City Traffic.avif" alt="City Traffic" width="900" height="400">
+  <img src="./Images/City Traffic.avif" alt="City Traffic" width="900" height="400">
 <br />
 <figcaption>Time lapse breaklights in the city</figcaption>
   </figure>
