Update 22.11.3 - Mini proj copy.html

--- a/22.11.3 - Mini proj copy.html
+++ b/22.11.3 - Mini proj copy.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Andrew's Mini Project November 3rd, 2023</title>
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href=".style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 <br />
 <br />
   <figure id="top of page">
-  <img src="./Images/City Traffic.avif" alt="City Traffic" width="900" height="400">
+  <img src=".City Traffic.avif" alt="City Traffic" width="900" height="400">
 <br />
 <figcaption>Time lapse breaklights in the city</figcaption>
   </figure>
