--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Andrew's Mini Project November 3rd, 2023</title>
-<link rel="stylesheet" href="./Mini-Projects-at-UR/style.css" />
+<link rel="stylesheet" href=".styles.css">
 </head>
 
 <body>
