--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br />
 <br />
   <figure id="top of page">
-  <img src="./Images/City Traffic.avif" alt="City Traffic" width="900" height="400">
+  <img src="./images/City Traffic.avif" alt="City Traffic" width="900" height="400">
 <br />
 <figcaption>Time lapse breaklights in the city</figcaption>
   </figure>
